Update with home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   </head>
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+      <a href="https://samantha-web.github.io/navigationhub/" class="w-full bg-cyan-600 text-white text-2xl font-semibold py-6 px-8 rounded-lg shadow-lg hover:bg-cyan-700 transition duration-300 transform group-hover:scale-105"
+          >Back to Home</a>
       <h1 class="text-2xl font-bold mb-6 text-center">
         Bicycle Chain Length Calculator
       </h1>
